--- a/app/src/main/res/layout/create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/create_shipment_delivery_address.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="100dp"
         android:layout_marginTop="39dp">
 
         <LinearLayout
@@ -31,6 +31,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
+                    android:layout_marginRight="10dp"
                     android:orientation="vertical">
 
                     <TextView
@@ -105,7 +106,7 @@
                 <TextView
                     android:id="@+id/createShipmentAddrsLine1"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="182, 1st Floor, 2nd Cross Rd,\n7th Main, Koramangala\nBengaluru, Karnataka,\nIndia. 560034."
                     android:textColor="@color/black"
                     android:textFontWeight="500"
