--- a/app/src/main/res/layout/upload_invoice_dialog_box.xml
+++ b/app/src/main/res/layout/upload_invoice_dialog_box.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="350dp"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center"
     android:orientation="vertical">
 
     <androidx.core.widget.NestedScrollView
@@ -42,6 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
 
 
         </LinearLayout>
