--- a/app/src/main/res/layout/upload_invoice_single_layout.xml
+++ b/app/src/main/res/layout/upload_invoice_single_layout.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="64dp"
+    android:layout_marginBottom="8dp"
     android:orientation="vertical">
 
 
@@ -102,5 +102,17 @@
             android:textFontWeight="500"/>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/packageViewText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="View Package to Access Item Photos"
+        android:textSize="10sp"
+        android:textFontWeight="500"
+        android:textColor="#3A5FD8"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center_horizontal"/>
 
 </LinearLayout>
