--- a/app/src/main/res/layout/fragment_create_ship_request_summary.xml
+++ b/app/src/main/res/layout/fragment_create_ship_request_summary.xml
@@ -152,7 +152,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="gone">
+                        >
 
                         <TextView
                             android:id="@+id/title"
@@ -194,6 +194,7 @@
                                     android:layout_width="wrap_content"
                                     android:layout_height="30dp"
                                     android:background="@null"
+                                    android:dropDownWidth="72dp"
                                     android:overlapAnchor="false"
                                     android:paddingLeft="0dp" />
 
@@ -1014,6 +1015,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginTop="18dp"
+                        android:layout_marginBottom="43dp"
                         android:gravity="center_horizontal">
 
                         <androidx.cardview.widget.CardView
@@ -1061,7 +1064,6 @@
                             android:id="@+id/createShipBtn"
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
-                            android:layout_marginVertical="20dp"
                             android:layout_marginLeft="20dp"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
