--- a/app/src/main/res/layout/fragment_shipment_updates.xml
+++ b/app/src/main/res/layout/fragment_shipment_updates.xml
@@ -53,6 +53,7 @@
             android:id="@+id/shipmentCommentSendBtn"
             android:layout_width="43dp"
             android:layout_height="45dp"
+            android:scaleType="centerCrop"
             android:layout_marginLeft="6dp"
             android:src="@drawable/send_button" />
 
