--- a/app/src/main/res/layout/fragment_order_updates.xml
+++ b/app/src/main/res/layout/fragment_order_updates.xml
@@ -54,6 +54,7 @@
             android:id="@+id/sendBtn"
             android:layout_width="43dp"
             android:layout_height="45dp"
+            android:scaleType="centerCrop"
             android:layout_marginLeft="6dp"
             android:src="@drawable/send_button" />
 
