--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -494,7 +494,7 @@
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:layout_marginVertical="20dp">
+                                android:layout_marginTop="20dp">
 
                                 <LinearLayout
                                     android:layout_width="match_parent"
@@ -666,7 +666,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="32dp"
                             android:layout_gravity="center_horizontal"
-                            android:layout_marginTop="20dp"
                             android:insetTop="0dp"
                             android:insetBottom="0dp"
                             android:letterSpacing="0.03"
