after bug fix (first batch of bug)

--- a/app/src/main/res/layout/create_shipment_delivery_address.xml
+++ b/app/src/main/res/layout/create_shipment_delivery_address.xml
@@ -35,6 +35,7 @@
                     android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/deliverTo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Deliver To"
@@ -52,6 +53,7 @@
                         android:textFontWeight="500"/>
 
                     <TextView
+                        android:id="@+id/contact"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Contact Number"
@@ -96,6 +98,7 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:id="@+id/deliveryAdd"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Delivery Address"
@@ -125,6 +128,7 @@
     </LinearLayout>
 
     <View
+        android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#C4C4C4"
