--- a/app/src/main/res/layout/fragment_third_on_boarding.xml
+++ b/app/src/main/res/layout/fragment_third_on_boarding.xml
@@ -49,6 +49,7 @@
 
 
             <ImageView
+                android:layout_marginTop="-30dp"
                 android:layout_width="wrap_content"
                 android:layout_height="436dp"
                 android:layout_gravity="center_horizontal"
@@ -58,7 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="-40dp"
+            android:layout_marginTop="-30dp"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/we_ll_consolidate_ship_it_to_you"
             android:textAlignment="center"
@@ -76,7 +77,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="56dp"
                 android:layout_marginHorizontal="24dp"
-                android:layout_marginVertical="20dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginBottom="40dp"
+
                 android:backgroundTint="@color/button_color"
                 android:insetBottom="0dp"
                 android:insetTop="0dp"
@@ -85,7 +88,7 @@
                 android:textColor="@color/white"
                 android:textFontWeight="700"
                 android:textSize="24dp"
-                app:cornerRadius="5dp"
+                app:cornerRadius="8dp"
                 app:icon="@mipmap/button_arrow"
                 app:iconGravity="textEnd"
                 app:iconSize="24dp" />
