--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,7 @@
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:dropDownListViewStyle">@style/MySpinner</item>
+        <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
 
 
         ////////////////////////
