--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -36,12 +36,18 @@
     <!--        <item name="DialogSpotCount">8</item>-->
     <!--    </style>-->
 
-    <style name="PopupMenu">
+    <style name="PopupMenu" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:itemBackground">@color/box_background_color</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:textColor">@android:color/black</item>
         <item name="android:colorBackground">@color/hint_color</item>
         <item name="android:dividerHeight">1dp</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:itemPadding">0dp</item>
+        <item name="android:listPreferredItemHeightSmall">25dp</item>
+        <item name="android:layout_marginLeft">20dp</item>
+
+
     </style>
 
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
