--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -36,12 +36,16 @@
     <!--        <item name="DialogSpotCount">8</item>-->
     <!--    </style>-->
 
-    <style name="PopupMenu">
-        <item name="android:itemBackground">@color/box_background_color</item>
-        <item name="android:background">@android:color/transparent</item>
+    <style name="PopupMenu" parent="Theme.MaterialComponents.Light.NoActionBar">
+
+
         <item name="android:textColor">@android:color/black</item>
-        <item name="android:colorBackground">@color/hint_color</item>
+        <item name="android:dropDownWidth">wrap_content</item>
+
         <item name="android:dividerHeight">1dp</item>
+
+
+
     </style>
 
     <style name="MineCustomTabText" parent="TextAppearance.Design.Tab">
