--- a/app/src/main/res/layout/package_details_single_layout.xml
+++ b/app/src/main/res/layout/package_details_single_layout.xml
@@ -201,7 +201,8 @@
                     android:id="@+id/priceEditText"
                     android:background="@null"
                     android:maxLines="1"
-                    android:layout_width="70dp"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="3dp"
                     android:paddingLeft="8dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -239,7 +240,8 @@
                     android:id="@+id/secondPriceEditText"
                     android:background="@null"
                     android:maxLines="1"
-                    android:layout_width="70dp"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="3dp"
                     android:paddingLeft="8dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -279,7 +281,8 @@
                     android:id="@+id/thirdPriceEditText"
                     android:background="@null"
                     android:maxLines="1"
-                    android:layout_width="70dp"
+                    android:layout_width="wrap_content"
+                    android:paddingRight="3dp"
                     android:paddingLeft="8dp"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
