--- a/app/src/main/res/layout/return_item_dialog_box.xml
+++ b/app/src/main/res/layout/return_item_dialog_box.xml
@@ -15,6 +15,15 @@
         android:layout_marginVertical="20dp"
         android:layout_marginHorizontal="30dp">
 
+        <ImageView
+            android:id="@+id/close"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:src="@drawable/cross"
+            android:layout_gravity="right"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="15dp"/>
+
         <TextView
             android:id="@+id/string"
             android:layout_width="wrap_content"
