--- a/app/src/main/res/layout/fragment_locker_view_package.xml
+++ b/app/src/main/res/layout/fragment_locker_view_package.xml
@@ -6,9 +6,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".UI.Locker.LockerViewPackage">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
@@ -289,6 +293,71 @@
 
         </androidx.cardview.widget.CardView>
 
+        <androidx.cardview.widget.CardView
+            android:id="@+id/uploadInvoiceCard"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="21dp"
+            android:layout_marginTop="23dp"
+            app:cardCornerRadius="10dp"
+            app:cardElevation="4dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="26dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="2dp"
+                        android:layout_weight="600"
+                        android:lineSpacingExtra="2dp"
+                        android:text="No invoice found for this package"
+                        android:textColor="@color/black"
+                        android:textSize="12sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="6dp"
+                        android:layout_weight="400"
+                        android:lineSpacingExtra="2dp"
+                        android:text="As per customs regulations, attaching invoice is mandatory for all shipments"
+                        android:textColor="@color/black"
+                        android:textSize="10sp" />
+
+
+                </LinearLayout>
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:text="Upload Invoice"
+                    android:textAllCaps="false"
+                    android:textColor="@color/white"
+                    android:textFontWeight="700"
+                    android:textSize="10sp"
+                    app:backgroundTint="#2D8DFF"
+                    app:cornerRadius="5dp" />
+
+
+            </LinearLayout>
+
+
+
+        </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/tabCard"
@@ -325,11 +394,12 @@
             <androidx.viewpager.widget.ViewPager
                 android:id="@+id/viewPackageViewPager"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="500dp" />
 
         </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
