--- a/app/src/main/res/layout/fragment_shipment_landing.xml
+++ b/app/src/main/res/layout/fragment_shipment_landing.xml
@@ -69,7 +69,7 @@
                                     android:id="@+id/deliverToName"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Nikkitha Shanker"
+                                    android:text=""
                                     android:textColor="@color/black"
                                     android:textFontWeight="600"
                                     android:textSize="10sp" />
@@ -107,7 +107,7 @@
                                     android:id="@+id/viewShipmentShipmentId"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text=" #329865"
+                                    android:text=""
                                     android:textColor="@color/black"
                                     android:textFontWeight="600"
                                     android:textSize="10sp" />
@@ -192,7 +192,7 @@
                                     android:id="@+id/requestDate"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="23 Dec 2020"
+                                    android:text=""
                                     android:textColor="@color/black"
                                     android:textFontWeight="600"
                                     android:textSize="10sp" />
@@ -276,7 +276,7 @@
                                     android:id="@+id/packageWeight"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="3.5 KG"
+                                    android:text=""
                                     android:textColor="@color/black"
                                     android:textFontWeight="600"
                                     android:textSize="10sp" />
@@ -904,16 +904,19 @@
                             android:id="@+id/downloadInvoiceLayout"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_marginHorizontal="24dp"
+                            android:visibility="gone"
                             android:layout_marginTop="19dp"
                             android:gravity="center_horizontal"
-                            android:visibility="gone">
+                            >
 
                             <androidx.cardview.widget.CardView
                                 android:id="@+id/downloadInvoiceBtn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="27dp"
                                 android:clickable="true"
+                                android:layout_marginLeft="24dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_weight="1"
                                 android:foreground="?android:attr/selectableItemBackground"
                                 app:cardCornerRadius="5dp">
 
@@ -922,7 +925,7 @@
                                     android:layout_height="match_parent"
                                     android:background="@drawable/logout_shadow"
                                     android:gravity="center"
-                                    android:paddingHorizontal="19dp"
+                                    android:paddingHorizontal="10dp"
                                     android:text="Download Invoice"
                                     android:textColor="#2D8DFF"
                                     android:textFontWeight="700"
@@ -935,12 +938,15 @@
                                 android:id="@+id/trackShipmentBtn"
                                 android:layout_width="wrap_content"
                                 android:layout_height="27dp"
-                                android:layout_marginLeft="20dp"
+
                                 android:layout_marginBottom="10dp"
+                                android:layout_marginRight="24dp"
+                                android:layout_marginLeft="10dp"
+                                android:layout_weight="1"
                                 android:insetTop="0dp"
                                 android:insetBottom="0dp"
                                 android:letterSpacing="0.03"
-                                android:paddingHorizontal="26dp"
+
                                 android:text="Track Shipment"
                                 android:textAllCaps="false"
                                 android:textColor="@color/white"
